objects/OpportunityLineItem.object
<CustomObject><fields>
        <fullName>Revenue_Months__c</fullName>
        <label>Revenue Months</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Revenue_Projection_Method__c</fullName>
        <label>Revenue Projection Method</label>
        <picklist>
            <picklistValues>
                <fullName>Straight Line</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Revenue_Start_Date__c</fullName>
        <label>Revenue Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><enableFeeds>false</enableFeeds></CustomObject>